# bc-sea-orm

./: Cargo.toml  README.md  docker-compose.gen-sea-orm-entity.yaml  docker-compose.local.yaml
src/: lib.rs  main.rs  repo.rs
src/entity/: edges_to_wallets.rs  mod.rs  prelude.rs  tokens.rs  wallets.rs  wallets_to_tokens.rs
src/migrator/: m20240318_000001_create_edges_to_wallets.rs  m20240318_000002_create_tokens.rs  m20240318_000003_create_wallets.rs  m20240318_000004_create_wallets_to_tokens.rs  mod.rs
