[package]
name = "bc_orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
sea-orm = { version = "^0.12.0", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration =  "^0.12.0"
serde = { version = "^1.0.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "^1.0.0"
bigchaindb = { git = "https://github.com/macroexpansion/bigchaindb-rs", tag = "v0.1.0" }
anyhow = "1.0.81"
